cluster/deploy-local-identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owlvey-identity-local-deployment
  namespace: owlvey
spec:
  replicas: 1
  selector:
    matchLabels:
      key: owlvey-identity-pod
  template:
    metadata:
      labels:
        key: owlvey-identity-pod
    spec:      
      containers:
      - name: owlvey-identity
        image: localhost:48700/owlvey/identity:latest
        imagePullPolicy: Always
        ports:
            - containerPort: 80
